# server/src/main/java/cz/cvut/fel/via/db/model/User.java
@@ -18,4 +18,6 @@ public class User {
     private String username;
 
     private String password;
+
+    private boolean isAdmin;
 }
